--- a/package.json
+++ b/package.json
@@ -31,12 +31,17 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "express-rescue": "^1.1.26",
     "joi": "^17.6.0",
     "mysql2": "^2.3.0",
     "shelljs": "^0.8.5"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.1",
+    "@types/express": "^4.17.13",
+    "@types/mocha": "^9.1.1",
+    "@types/sinon": "^10.0.12",
     "chai": "^4.3.4",
     "eslint-config-trybe-backend": "^1.0.4",
     "frisby": "^2.1.2",
