--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
   },
   "devDependencies": {
     "@types/chai": "^4.3.1",
+    "@types/chai-as-promised": "^7.1.5",
     "@types/express": "^4.17.13",
     "@types/mocha": "^9.1.1",
     "@types/sinon": "^10.0.12",
     "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
     "eslint-config-trybe-backend": "^1.0.4",
     "frisby": "^2.1.2",
     "jest": "^26.4.1",
